--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,12 @@ jobs:
         run: python -m pip install --upgrade pip pyinstaller
 
       - name: Build (PyInstaller)
-        run: pyinstaller --clean --noconfirm --name pomocus --windowed --icon=assets/icon.ico pomocus_app.py
+        run: |
+          if [ "$RUNNER_OS" == "macOS" ]; then
+            pyinstaller --clean --noconfirm --name pomocus --windowed --icon=assets/icon.icns pomocus_app.py
+          else
+            pyinstaller --clean --noconfirm --name pomocus --windowed --icon=assets/icon.ico pomocus_app.py
+          fi
 
       - name: Package artifact (Windows)
         if: runner.os == 'Windows'
