--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,11 @@ jobs:
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "macOS" ]; then
-            pyinstaller --clean --noconfirm --name pomocus --windowed --icon=assets/icon.icns pomocus_app.py
+            if [ -f "assets/icon.icns" ]; then
+              pyinstaller --clean --noconfirm --name pomocus --windowed --icon=assets/icon.icns pomocus_app.py
+            else
+              pyinstaller --clean --noconfirm --name pomocus --windowed pomocus_app.py
+            fi
           else
             pyinstaller --clean --noconfirm --name pomocus --windowed --icon=assets/icon.ico pomocus_app.py
           fi
